# gee

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: cli.rs  github.rs  install.rs  main.rs  shell.rs
