[package]
name = "gee"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
